[package]
name = "followermaze"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[lib]
name = "followermaze"
path = "src/lib/mod.rs"

[dependencies]
tokio = "0.2.0-alpha.6"
log = "0.4.2"
env_logger = "0.5.10"
bytes = "0.4.12"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
anyhow = "1.0.19"
