[package]
name = "followermaze"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[lib]
name = "followermaze"
path = "src/lib/mod.rs"

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
log = "0.4.2"
env_logger = "0.7.1"
bytes = "1.0.0"
futures = "0.3.1"
anyhow = "1.0.19"
tokio-util = { version = "0.6.0", features = ["codec"] }
